--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -57,29 +57,29 @@ contact_matrix <- (contact_matrix / max(Re(eigen(contact_matrix)$values))) /
   demography_vector
 
 # an intervention to close schools
-close_schools <- intervention(
+close_schools <- epidemics::intervention(
   type = "contacts",
   time_begin = 200,
   time_end = 260,
-  reduction = matrix(c(0.5, 0.01, 0.01))
+  reduction = base::matrix(c(0.5, 0.01, 0.01))
 )
 
 # view the intervention
 close_schools
 
 # initial conditions defined as proportions and converted to absolute values
-initial_conditions <- matrix(
+initial_conditions <- base::matrix(
   c(S = 1 - 1e-6, E = 0, I = 1e-6, R = 0),
   nrow = length(demography_vector),
   ncol = 4L, byrow = TRUE
 ) * demography_vector
 
 # an intervention to close schools
-close_schools <- intervention(
+close_schools <- epidemics::intervention(
   type = "contacts",
   time_begin = 200,
   time_end = 260,
-  reduction = matrix(c(0.15,0.15,0.15))
+  reduction = base::matrix(c(0.15,0.15,0.15))
 )
 
 # view the intervention
