add question mark to entry title

--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to use _epidemics_ classes with _odin_-generated models"
+title: "How to use _epidemics_ classes with _odin_-generated models?"
 format: 
   html:
     code-link: true
