--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -9,6 +9,11 @@ editor_options:
 date: last-modified
 toc: true
 toc_float: true
+author: 
+  - name: "Pratik Gupte"
+    orcid: "0000-0001-5294-7819"
+  - name: "Adam Kucharski"
+    orcid: "0000-0001-8814-9421"
 ---
 
 ```{r, include = FALSE}
